--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>Azrty</span></a>
+						<a href="index.html" class="logo"><strong>Opensource</strong> <span>Azrty</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
