--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			$('.typist')
 				.typist({
 					speed: 12,
-					text: 'Développeur'
+					text: 'Ici, c\'est'
 				})
 				.typistAdd(' nodejs')
 			        .typistPause(3000) // 3 sec
@@ -79,7 +79,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Ici, c'est</h1> <h1 class="typist"></h1>
+								<p class="typist"></p>
 							</header>
 							<div class="content">
 								<p>A responsive site template designed by HTML5 UP<br />
