--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 				.typistAdd(' nodejs')
 			        .typistPause(3000) // 3 sec
 			        .typistRemove(6)
-			        .typistAdd('skript')
-			        .typistPause(3000) // 3 sec
+			        .typistAdd('skript')			        .typistPause(3000) // 3 sec
 			        .typistRemove(6)
 			        .typistAdd('java')
 			        .typistPause(1000) // 1 sec
@@ -80,7 +79,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<p class="typist"></p>
+								<h1 class="typist"></h1>
 							</header>
 							<div class="content">
 								<p>A responsive site template designed by HTML5 UP<br />
