--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>Azrty - OpenSource</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,28 +22,19 @@
 					speed: 12,
 					text: 'Ici, c\'est'
 				})
-				.typistAdd(' nodejs')
+			        .typistAdd('gratuit')
 			        .typistPause(3000) // 3 sec
+			        .typistRemove(7)
+			        .typistAdd('simple')
+		            .typistPause(3000) // 3 sec
 			        .typistRemove(6)
-			        .typistAdd('skript')			        .typistPause(3000) // 3 sec
-			        .typistRemove(6)
-			        .typistAdd('java')
-			        .typistPause(1000) // 1 sec
-			        .typistAdd(' (un peu)')
-		                .typistPause(3000) // 3 sec
-			        .typistRemove(13)
-			        .typistAdd('web')
+			        .typistAdd('complet')
 			        .typistPause(3000) // 3 sec
-			        .typistRemove(4)
-			        .typistPause(3000) // 3 sec
-			        .typistRemove(11)
-			        .typistAdd('Administrateur Système')
-			        .typistPause(3000) // 3 sec
-			        .typistRemove(22)
-			        .typistAdd('Fondateur d’AzerWorld')
-			        .typistPause(3000)
-			        .typistRemove(22)
-			        .typistAdd('Passionné de la technologie depuis 2012 !');
+			        .typistRemove(7)
+			        .typistAdd('pensé pour vous')
+					.typistPause(3000) // 3 sec
+			        .typistRemove(15)
+			        .typistAdd('OpenSource')
 			});
 	hljs.initHighlightingOnLoad();
 	</script>
