--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
 					speed: 12,
 					text: 'Ici, c\'est'
 				})
-			        .typistAdd(' gratuit')
+			        .typistAdd(' gratuit !')
 			        .typistPause(3000) // 3 sec
-			        .typistRemove(7)
-			        .typistAdd('simple')
+			        .typistRemove(9)
+			        .typistAdd('simple !')
 		            .typistPause(3000) // 3 sec
-			        .typistRemove(6)
-			        .typistAdd('complet')
+			        .typistRemove(8)
+			        .typistAdd('complet !')
 			        .typistPause(3000) // 3 sec
-			        .typistRemove(7)
-			        .typistAdd('pensé pour vous')
+			        .typistRemove(9)
+			        .typistAdd('pensé pour vous !')
 					.typistPause(3000) // 3 sec
-			        .typistRemove(15)
-			        .typistAdd('OpenSource')
+			        .typistRemove(17)
+			        .typistAdd('OpenSource, et ce le sera toujours !')
 			});
 	hljs.initHighlightingOnLoad();
 	</script>
