--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 			        .typistAdd('pensé pour vous !')
 					.typistPause(3000) // 3 sec
 			        .typistRemove(17)
+					.typistAdd('fait avec ❤ !')
+					.typistPause(3000) // 3 sec
+					.typistRemove(13)
 			        .typistAdd('OpenSource, et ce le sera toujours !')
 			});
 	hljs.initHighlightingOnLoad();
