--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 							<li><a href="elements.html">Elements</a></li>-->
 						</ul>
 						<ul class="actions vertical">
-							<li><a href="#" class="button special fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="#" class="button special fit">S'inscrire</a></li>
+							<li><a href="#" class="button fit">Se connecter</a></li>
 						</ul>
 					</nav>
 
 				<!-- Banner -->
-					<section id="banner" class="major">
+					<!--<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
 								<h1 class="typist"></h1>
@@ -84,7 +84,7 @@
 							</div>
 						</div>
 					</section>
-
+-->
 				<!-- Main -->
 					<div id="main">
 
@@ -95,8 +95,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">RegionNotifSK</a></h3>
+										<p>Avertir vos joueurs quand ils entrent dans des régions worldguard avec les titles</p>
 									</header>
 								</article>
 								<article>
@@ -104,8 +104,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">AzerGuide</a></h3>
+										<p>Système de guides avancé avec système de vote.</p>
 									</header>
 								</article>
 								<article>
@@ -113,8 +113,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="landing.html" class="link">MusicManSK</a></h3>
+										<p>Système de musique avec gui (menu).</p>
 									</header>
 								</article>
 								<article>
@@ -122,11 +122,11 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="landing.html" class="link">InfosManSK</a></h3>
+										<p>Commande ouvrant un menu qui permet de voir les informations d'un joueur</p>
 									</header>
 								</article>
-								<article>
+								<!--<article>
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
@@ -145,8 +145,8 @@
 									</header>
 								</article>
 							</section>
-
-						<!-- Two -->
+-->
+						<!-- Two
 							<section id="two">
 								<div class="inner">
 									<header class="major">
@@ -160,8 +160,8 @@
 							</section>
 
 					</div>
-
-				<!-- Contact -->
+-->
+				<!-- Contact
 					<section id="contact">
 						<div class="inner">
 							<section>
@@ -210,7 +210,7 @@
 								</section>
 							</section>
 						</div>
-					</section>
+					</section>-->
 
 				<!-- Footer -->
 					<footer id="footer">
