--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 										<h3><a href="landing.html" class="link">Etiam</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
-								</article>
+								</article>-->
 							</section>
--->
+
 						<!-- Two
 							<section id="two">
 								<div class="inner">
@@ -159,9 +159,9 @@
 								</div>
 							</section>
 
-					</div>
--->
-				<!-- Contact
+					--></div>
+<!--
+				< Contact
 					<section id="contact">
 						<div class="inner">
 							<section>
