--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 										<h3><a href="landing.html" class="link">InfosManSK</a></h3>
 										<p>Commande ouvrant un menu qui permet de voir les informations d'un joueur</p>
 									</header>
-								</article>
-								<!--<article>
+								</article><!--
+								<article>
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
@@ -143,11 +143,10 @@
 										<h3><a href="landing.html" class="link">Etiam</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
-								</article>-->
-							</section>
+								</article>
+							--></section>
 
-						<!-- Two
-							<section id="two">
+							<!--<section id="two">
 								<div class="inner">
 									<header class="major">
 										<h2>Massa libero</h2>
@@ -160,9 +159,8 @@
 							</section>
 
 					--></div>
-<!--
-				< Contact
-					<section id="contact">
+
+					<!--<section id="contact">
 						<div class="inner">
 							<section>
 								<form method="post" action="#">
@@ -210,10 +208,9 @@
 								</section>
 							</section>
 						</div>
-					</section>-->
+					</section>
 
-				<!-- Footer -->
-					<footer id="footer">
+					--><footer id="footer">
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
