--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					</nav>
 
 				<!-- Banner -->
-					<!--<section id="banner" class="major">
+					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
 								<h1 class="typist"></h1>
@@ -84,7 +84,7 @@
 							</div>
 						</div>
 					</section>
--->
+
 				<!-- Main -->
 					<div id="main">
 
@@ -125,28 +125,11 @@
 										<h3><a href="landing.html" class="link">InfosManSK</a></h3>
 										<p>Commande ouvrant un menu qui permet de voir les informations d'un joueur</p>
 									</header>
-								</article><!--
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
-									</header>
 								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
-									</header>
-								</article>
-							--></section>
+							</section>
 
-							<!--<section id="two">
+						<!-- Two
+							<section id="two">
 								<div class="inner">
 									<header class="major">
 										<h2>Massa libero</h2>
@@ -156,11 +139,12 @@
 										<li><a href="landing.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
-							</section>
+							</section>-->
 
-					--></div>
+					</div>
 
-					<!--<section id="contact">
+				<!-- Contact
+					<section id="contact">
 						<div class="inner">
 							<section>
 								<form method="post" action="#">
@@ -208,9 +192,10 @@
 								</section>
 							</section>
 						</div>
-					</section>
+					</section>-->
 
-					--><footer id="footer">
+				<!-- Footer -->
+					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
