--- a/404.html
+++ b/404.html
@@ -1,1 +1,116 @@
-Erreur 404
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Page introuvable</title>
+  <!-- Bootstrap-->
+  <!--<link rel="stylesheet" href="/assets/styles/bootstrap.min.css">
+  <link rel="stylesheet" href="/assets/styles/navbar.css">-->
+  <!-- Jquery-->
+  <script src="/assets/js/jquery.1.11.0.min.js"></script>
+  <!-- Google fonts - Open Sans-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800,400italic">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet" type="text/css">
+  <!-- FontAwesome-->
+  <link href="/assets/styles/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="/assets/styles/pe-icon-7-stroke.css">
+  <link rel="stylesheet" href="/assets/styles/helper.css">
+  <!-- theme stylesheet-->
+  <!--<link id="theme-stylesheet" rel="stylesheet" href="/assets/styles/style.blue.css">
+  <link rel="stylesheet" href="/assets/styles/simpletextrotator.css">-->
+  <!-- Custom stylesheet - for your changes-->
+  <!--<link rel="stylesheet" href="/assets/styles/custom.css">-->
+  <!-- Favicon-->
+  <!--<link rel="shortcut icon" href="/assets/favicon.png">-->
+  <!--Tweaks for older IEs-->
+  <!--if lt IE 9script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
+  |
+  script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')-->
+  <style>
+    .btn {
+      margin-top: 5px;
+      color: #ffffff;
+    }
+    .btn-discord {
+      background-color: #7289da;
+      border-color: #7289da;
+    }
+  </style>
+</head>
+
+</html>
+<body>
+  <header class="header">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand scroll-to hidden-lg-down" href="#all">
+            <span class="site_name">AzerWorld</span>
+            <div class="clearfix"></div>
+          </a>
+          <div class="navbar-buttons">
+            <button class="navbar-toggle navbar-btn" data-toggle="collapse" data-target=".navbar-collapse">Menu
+              <i class="pe-7s-menu"></i>
+            </button>
+          </div>
+        </div>
+        <!--<div class="collapse navbar-collapse navbar-right" id="navigation">
+          <ul class="nav navbar-nav">
+            <li>
+              <a href="/">Accueil</a>
+            </li>
+            <li>
+              <a href="/market">Market</a>
+            </li>
+            <li>
+              <a href="https://github.com/MineWeb/">Github</a>
+            </li>
+            <li>
+              <a href="https://docs.mineweb.org">Documentation</a>
+            </li>
+            <li>
+              <a href="https://discordapp.com/invite/3QYdt8r">Discord</a>
+            </li>
+          </ul>
+        </div>-->
+      </div>
+    </div>
+  </header>
+  <section class="section no-padding-bottom">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <div class="icon brand-secondary">
+                <i class="pe-7s-share"></i>
+              </div>
+              <h1>Vous êtes azeeermeeent perdu !
+              <h2>Erreur 404 !</h2>
+              <p>Cette Page est introuvable, celle-ci est introuvable ou a peut-être été supprimé.</p>
+              <p class="margin-bottom--zero">
+                <!--<img class="img-responsive" alt="" src="/assets/img/features3_mb.png"-->
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    <footer class="footer">
+      <div class="footer__copyright">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-7">
+              <p>2014 - 2018 - Tous droits réservés.
+              </p>
+            </div>
+            <div class="col-md-5"></div>
+            <p class="credit pull-right">
+                Développé avec
+                <span class="fa fa-heart"></span> par
+                <a href="https://azrty.com"> Azrty</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+</body>
