--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Page introuvable</title>
   <!-- Bootstrap-->
-  <!--<link rel="stylesheet" href="/assets/styles/bootstrap.min.css">
-  <link rel="stylesheet" href="/assets/styles/navbar.css">-->
+  <link rel="stylesheet" href="/assets/styles/bootstrap.min.css">
+  <!--<link rel="stylesheet" href="/assets/styles/navbar.css">-->
   <!-- Jquery-->
   <script src="/assets/js/jquery.1.11.0.min.js"></script>
   <!-- Google fonts - Open Sans-->
