--- a/404.html
+++ b/404.html
@@ -5,25 +5,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Page introuvable</title>
   <!-- Bootstrap-->
-  <link rel="stylesheet" href="/assets/styles/bootstrap.min.css">
-  <!--<link rel="stylesheet" href="/assets/styles/navbar.css">-->
+  <link rel="stylesheet" href="/assetsplus/styles/bootstrap.min.css">
+  <!--<link rel="stylesheet" href="/assetsplus/styles/navbar.css">-->
   <!-- Jquery-->
-  <script src="/assets/js/jquery.1.11.0.min.js"></script>
+  <script src="/assetsplus/js/jquery.1.11.0.min.js"></script>
   <!-- Google fonts - Open Sans-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800,400italic">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet" type="text/css">
   <!-- FontAwesome-->
-  <link href="/assets/styles/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="/assets/styles/pe-icon-7-stroke.css">
-  <link rel="stylesheet" href="/assets/styles/helper.css">
+  <link href="/assetsplus/styles/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="/assetsplus/styles/pe-icon-7-stroke.css">
+  <link rel="stylesheet" href="/assetsplus/styles/helper.css">
   <!-- theme stylesheet-->
-  <!--<link id="theme-stylesheet" rel="stylesheet" href="/assets/styles/style.blue.css">
-  <link rel="stylesheet" href="/assets/styles/simpletextrotator.css">-->
+  <!--<link id="theme-stylesheet" rel="stylesheet" href="/assetsplus/styles/style.blue.css">
+  <link rel="stylesheet" href="/assetsplus/styles/simpletextrotator.css">-->
   <!-- Custom stylesheet - for your changes-->
-  <!--<link rel="stylesheet" href="/assets/styles/custom.css">-->
+  <!--<link rel="stylesheet" href="/assetsplus/styles/custom.css">-->
   <!-- Favicon-->
-  <!--<link rel="shortcut icon" href="/assets/favicon.png">-->
+  <!--<link rel="shortcut icon" href="/assetsplus/favicon.png">-->
   <!--Tweaks for older IEs-->
   <!--if lt IE 9script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
   |
@@ -89,7 +89,7 @@
               <h2>Erreur 404 !</h2>
               <p>Cette Page est introuvable, celle-ci est introuvable ou a peut-être été supprimé.</p>
               <p class="margin-bottom--zero">
-                <!--<img class="img-responsive" alt="" src="/assets/img/features3_mb.png"-->
+                <!--<img class="img-responsive" alt="" src="/assetsplus/img/features3_mb.png"-->
               </p>
             </div>
           </div>
