--- a/404.html
+++ b/404.html
@@ -18,10 +18,10 @@
   <link rel="stylesheet" href="/assetsplus/styles/pe-icon-7-stroke.css">
   <link rel="stylesheet" href="/assetsplus/styles/helper.css">
   <!-- theme stylesheet-->
-  <!--<link id="theme-stylesheet" rel="stylesheet" href="/assetsplus/styles/style.blue.css">
-  <link rel="stylesheet" href="/assetsplus/styles/simpletextrotator.css">-->
+  <link id="theme-stylesheet" rel="stylesheet" href="/assetsplus/styles/style.blue.css">
+  <link rel="stylesheet" href="/assetsplus/styles/simpletextrotator.css">
   <!-- Custom stylesheet - for your changes-->
-  <!--<link rel="stylesheet" href="/assetsplus/styles/custom.css">-->
+  <link rel="stylesheet" href="/assetsplus/styles/custom.css">
   <!-- Favicon-->
   <!--<link rel="shortcut icon" href="/assetsplus/favicon.png">-->
   <!--Tweaks for older IEs-->
