--- a/404.html
+++ b/404.html
@@ -3,10 +3,27 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Page introuvable</title>
+  <title>Market - MineWeb</title>
+  <meta name="description" content="MineWeb est un CMS Minecraft simple, complet et rapide. Il à été développé pour la communauté, dans le but de completer leurs besoin. Ce CMS est la version 2 de LapisCraft, développé par Eywek. Le CMS possède son propre plugin pour plus de faciliter.">
+  <meta name="author" content="Eywek">
+  <meta name="keywords" content="Eywek, Mac', développement web, CMS, LapisCraft, MineWeb, minecraft, dev web, site, personnalisable, disponible, beta, alpha, finis, hebergement, pas cher, plugin, pas jsonapi, simple, complet, rapide">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="all,follow">
+  <meta property="og:url" content="https://mineweb.org/">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="MineWeb">
+  <meta property="og:title" content="MineWeb">
+  <meta property="og:description" content="A Minecraft CMS">
+  <meta property="og:image" content="http://mineweb.org/assetsplus/favicon.png">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@MineWebCMS">
+  <meta name="twitter:title" content="MineWeb">
+  <meta name="twitter:description" content="A Minecraft CMS">
+  <meta name="twitter:image:src" content="https://mineweb.org/assetsplus/favicon.png">
+  <meta name="twitter:url" content="https://mineweb.org/">
   <!-- Bootstrap-->
   <link rel="stylesheet" href="/assetsplus/styles/bootstrap.min.css">
-  <!--<link rel="stylesheet" href="/assetsplus/styles/navbar.css">-->
+  <link rel="stylesheet" href="/assetsplus/styles/navbar.css">
   <!-- Jquery-->
   <script src="/assetsplus/js/jquery.1.11.0.min.js"></script>
   <!-- Google fonts - Open Sans-->
@@ -23,7 +40,7 @@
   <!-- Custom stylesheet - for your changes-->
   <link rel="stylesheet" href="/assetsplus/styles/custom.css">
   <!-- Favicon-->
-  <!--<link rel="shortcut icon" href="/assetsplus/favicon.png">-->
+  <link rel="shortcut icon" href="/assetsplus/favicon.png">
   <!--Tweaks for older IEs-->
   <!--if lt IE 9script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
   |
@@ -47,7 +64,7 @@
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand scroll-to hidden-lg-down" href="#all">
-            <span class="site_name">AzerWorld</span>
+            <span class="site_name">MINEWEB</span>
             <div class="clearfix"></div>
           </a>
           <div class="navbar-buttons">
@@ -56,7 +73,7 @@
             </button>
           </div>
         </div>
-        <!--<div class="collapse navbar-collapse navbar-right" id="navigation">
+        <div class="collapse navbar-collapse navbar-right" id="navigation">
           <ul class="nav navbar-nav">
             <li>
               <a href="/">Accueil</a>
@@ -74,7 +91,7 @@
               <a href="https://discordapp.com/invite/3QYdt8r">Discord</a>
             </li>
           </ul>
-        </div>-->
+        </div>
       </div>
     </div>
   </header>
@@ -85,9 +102,9 @@
               <div class="icon brand-secondary">
                 <i class="pe-7s-share"></i>
               </div>
-              <h1>Vous êtes azeeermeeent perdu !
-              <h2>Erreur 404 !</h2>
-              <p>Cette Page est introuvable, celle-ci est introuvable ou a peut-être été supprimé.</p>
+              <h2>Oubs!</h2>
+              <p>L'auteur de cet article n'a pas défini le lien d'achat de son article, vous pouvez le contacter si vous pensez
+                que cela est un erreur. En autre terme, vous devez effectuer l'achat auprès de l'auteur.</p>
               <p class="margin-bottom--zero">
                 <!--<img class="img-responsive" alt="" src="/assetsplus/img/features3_mb.png"-->
               </p>
