--- a/404.html
+++ b/404.html
@@ -67,7 +67,7 @@
             <span class="site_name">MINEWEB</span>
             <div class="clearfix"></div>
           </a>
-          <div class="navbar-buttons">
+          <!--<div class="navbar-buttons">
             <button class="navbar-toggle navbar-btn" data-toggle="collapse" data-target=".navbar-collapse">Menu
               <i class="pe-7s-menu"></i>
             </button>
@@ -92,7 +92,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      --></div>
     </div>
   </header>
   <section class="section no-padding-bottom">
