--- a/404.html
+++ b/404.html
@@ -60,14 +60,14 @@
 </html>
 <body>
   <header class="header">
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <!--<div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand scroll-to hidden-lg-down" href="#all">
             <span class="site_name">MINEWEB</span>
             <div class="clearfix"></div>
           </a>
-          <!--<div class="navbar-buttons">
+          <div class="navbar-buttons">
             <button class="navbar-toggle navbar-btn" data-toggle="collapse" data-target=".navbar-collapse">Menu
               <i class="pe-7s-menu"></i>
             </button>
@@ -92,9 +92,9 @@
             </li>
           </ul>
         </div>
-      --></div>
+      </div>
     </div>
-  </header>
+  --></header>
   <section class="section no-padding-bottom">
         <div class="container">
           <div class="row">
