--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
   <meta name="twitter:url" content="https://mineweb.org/">
   <!-- Bootstrap-->
   <link rel="stylesheet" href="/assetsplus/styles/bootstrap.min.css">
-  <link rel="stylesheet" href="/assetsplus/styles/navbar.css">
+  <!--<link rel="stylesheet" href="/assetsplus/styles/navbar.css">-->
   <!-- Jquery-->
   <script src="/assetsplus/js/jquery.1.11.0.min.js"></script>
   <!-- Google fonts - Open Sans-->
