--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
   <meta name="twitter:url" content="https://mineweb.org/">
   <!-- Bootstrap-->
   <link rel="stylesheet" href="/assetsplus/styles/bootstrap.min.css">
-  <!--<link rel="stylesheet" href="/assetsplus/styles/navbar.css">-->
+  <link rel="stylesheet" href="/assetsplus/styles/navbar.css">
   <!-- Jquery-->
   <script src="/assetsplus/js/jquery.1.11.0.min.js"></script>
   <!-- Google fonts - Open Sans-->
@@ -60,7 +60,7 @@
 </html>
 <body>
   <header class="header">
-    <!--<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand scroll-to hidden-lg-down" href="#all">
@@ -79,22 +79,13 @@
               <a href="/">Accueil</a>
             </li>
             <li>
-              <a href="/market">Market</a>
-            </li>
-            <li>
-              <a href="https://github.com/MineWeb/">Github</a>
-            </li>
-            <li>
-              <a href="https://docs.mineweb.org">Documentation</a>
-            </li>
-            <li>
-              <a href="https://discordapp.com/invite/3QYdt8r">Discord</a>
+              <a href="https://open.azrty.com/">Boutique</a>
             </li>
           </ul>
         </div>
       </div>
     </div>
-  --></header>
+  </header>
   <section class="section no-padding-bottom">
         <div class="container">
           <div class="row">
