--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Market - MineWeb</title>
+  <title>Azrty - Boutique</title>
   <meta name="description" content="MineWeb est un CMS Minecraft simple, complet et rapide. Il à été développé pour la communauté, dans le but de completer leurs besoin. Ce CMS est la version 2 de LapisCraft, développé par Eywek. Le CMS possède son propre plugin pour plus de faciliter.">
   <meta name="author" content="Eywek">
   <meta name="keywords" content="Eywek, Mac', développement web, CMS, LapisCraft, MineWeb, minecraft, dev web, site, personnalisable, disponible, beta, alpha, finis, hebergement, pas cher, plugin, pas jsonapi, simple, complet, rapide">
@@ -64,7 +64,7 @@
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand scroll-to hidden-lg-down" href="#all">
-            <span class="site_name">MINEWEB</span>
+            <span class="site_name">AzerWorld</span>
             <div class="clearfix"></div>
           </a>
           <div class="navbar-buttons">
