--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand scroll-to hidden-lg-down" href="#all">
-            <span class="site_name">AzerWorld</span>
+            <span class="site_name">AZERWORLD</span>
             <div class="clearfix"></div>
           </a>
           <div class="navbar-buttons">
