--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand scroll-to hidden-lg-down" href="#all">
-            <span class="site_name">MINEWEB</span>
+            <span class="site_name">Azrty</span>
             <div class="clearfix"></div>
           </a>
           <div class="navbar-buttons">
@@ -93,9 +93,9 @@
               <div class="icon brand-secondary">
                 <i class="pe-7s-share"></i>
               </div>
-              <h2>Oubs!</h2>
-              <p>L'auteur de cet article n'a pas défini le lien d'achat de son article, vous pouvez le contacter si vous pensez
-                que cela est un erreur. En autre terme, vous devez effectuer l'achat auprès de l'auteur.</p>
+              <h1>Vous êtes azeeermeeent perdu !
+              <h2>Erreur 404 !</h2>
+              <p>Cette Page est introuvable, celle-ci est introuvable ou a peut-être été supprimé.</p>
               <p class="margin-bottom--zero">
                 <!--<img class="img-responsive" alt="" src="/assetsplus/img/features3_mb.png"-->
               </p>
@@ -116,6 +116,11 @@
                 Développé avec
                 <span class="fa fa-heart"></span> par
                 <a href="https://azrty.com"> Azrty</a>
+				basé sur le site web de
+				<a href="https://mineweb.org"> Mineweb</a>
+				par
+				<a href="https://eywek.fr"> Eywek</a> et
+                <a href="https://github.com/vmarchaud"> ThisIsMac</a>.
             </p>
           </div>
         </div>
