--- a/404.html
+++ b/404.html
@@ -113,7 +113,7 @@
             </div>
             <div class="col-md-5"></div>
             <p class="credit pull-right">
-                Développé avec <span class="fa fa-heart"></span> par <a href="https://azrty.com"> Azrty</a> basé sur le site web de <a href="https://mineweb.org"> Mineweb</a> par <a href="https://eywek.fr"> Eywek</a> et <a href="https://github.com/vmarchaud"> ThisIsMac</a>.
+                Développé avec <span class="fa fa-heart"></span> par <a href="https://azrty.com"> Azrty</a>, <a href="https://eywek.fr"> Eywek</a> et <a href="https://github.com/vmarchaud"> ThisIsMac</a>.
             </p>
           </div>
         </div>
