--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 								<h1 class="typist"></h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
+								<p>Ouverture prochaînement !</p><!--<br />-->
+								<!--and released under the Creative Commons.</p>-->
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
