--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								<p>Ouverture prochaînement !</p><!--<br />-->
 								<!--and released under the Creative Commons.</p>-->
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">Préparez-vous !</a></li>
 								</ul>
 							</div>
 						</div>
